# ObsidianSync

./: CMakeLists.txt  README.md
Sync/: CMakeLists.txt  main.cpp  obsidiansync.cpp  obsidiansync.h  obsidiansync.ui
settingupdate/: CMakeLists.txt  settingupdate.cpp  settingupdate.h
